# temus-gwas

./: .gitignore  README.md  build_container.sh  main.nf  nextflow.config
conf/: aws.config  local.config  run_job.config
containers/gwas/: Dockerfile
modules/: by_chromosomes.nf  gwas.nf  input_checks.nf  populations.nf  qc.nf  stage.nf  utils.nf
regenie_viewer/: README.md  pyproject.toml
regenie_viewer/view_manhattan/: cli.py
